Safe point for expanding quote